; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/nubus/extr_nubus.c_nubus_find_rsrc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/nubus/extr_nubus.c_nubus_find_rsrc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nubus_dir = type { i32 }
%struct.nubus_dirent = type { i8 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nubus_find_rsrc(%struct.nubus_dir* %0, i8 zeroext %1, %struct.nubus_dirent* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nubus_dir*, align 8
  %6 = alloca i8, align 1
  %7 = alloca %struct.nubus_dirent*, align 8
  store %struct.nubus_dir* %0, %struct.nubus_dir** %5, align 8
  store i8 %1, i8* %6, align 1
  store %struct.nubus_dirent* %2, %struct.nubus_dirent** %7, align 8
  br label %8

8:                                                ; preds = %22, %3
  %9 = load %struct.nubus_dir*, %struct.nubus_dir** %5, align 8
  %10 = load %struct.nubus_dirent*, %struct.nubus_dirent** %7, align 8
  %11 = call i32 @nubus_readdir(%struct.nubus_dir* %9, %struct.nubus_dirent* %10)
  %12 = icmp ne i32 %11, -1
  br i1 %12, label %13, label %23

13:                                               ; preds = %8
  %14 = load %struct.nubus_dirent*, %struct.nubus_dirent** %7, align 8
  %15 = getelementptr inbounds %struct.nubus_dirent, %struct.nubus_dirent* %14, i32 0, i32 0
  %16 = load i8, i8* %15, align 1
  %17 = zext i8 %16 to i32
  %18 = load i8, i8* %6, align 1
  %19 = zext i8 %18 to i32
  %20 = icmp eq i32 %17, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %24

22:                                               ; preds = %13
  br label %8

23:                                               ; preds = %8
  store i32 -1, i32* %4, align 4
  br label %24

24:                                               ; preds = %23, %21
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @nubus_readdir(%struct.nubus_dir*, %struct.nubus_dirent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
